@@ -1,7 +1,7 @@
 <?php
 defined('TYPO3_MODE') or die('Access denied.');
 
-\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addPItoST43('ratings', '', '', 'list_type', false);
+\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addPItoST43('ratings', 'class.tx_ratings.php', '', 'list_type', false);
 
 // eID
 $GLOBALS['TYPO3_CONF_VARS']['FE']['eID_include']['tx_ratings_ajax'] = 'EXT:ratings/Resources/Public/Scripts/Php/EidRunner.php';
